--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,145 @@
-h1{
-     background-color:pink;
+body{
+  background-image: linear-gradient(#845A17,#F0D4A7,#EAA029);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  text-align: left;
+  display:flex;
+  justify-content: space-between;
+  align-items:center;
+  padding:20px;
+  margin-bottom: 50px;
+}
+
+.title {
+  font-size:48px;
+  font-weight:600;
+  color: #2b2b2b;
+}
+
+.profile_image {
+  height: 76px;
+  width: 76px;
+  border-radius: 50%;
+  object-fit:cover;
+  background-color: #d4b582
+ }
+   
+.search-box {
+  display:flex;
+  margin: 20px 20px;
+  border-radius:80px;
+  height: 175px;
+}
+
+.search-box input{
+  background:#7c767680 ;
+  font-size: 40px;
+  border-radius:50px;
+  padding :0 20px;
+  width: 100%;
+}
+
+.search-box input::placeholder {
+  color: #565454;
+  opacity: 1;  
+}
+
+.item-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+.categories {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 20px;
+
+}
+
+.category-card {
+  padding: 10px;
+}
+
+.all {
+  overflow: visible;
+  background: #e6d3b3;
+  border-radius: 20px;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+.category-card p {
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.popular-title {
+  font-size: 32px;
+  font-weight: 400;
+  padding: 10px 20px;
+}
+
+.popular-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 25px;
+  padding: 0 20px;
+}
+
+.popular-item {
+  padding: 15px;
+  text-align: center;
+}
+
+.popular-img {
+  overflow: visible;
+  background: #e6d3b3;
+  border-radius: 20px;
+  height: 280px;
+  width: 250px;
+  object-fit: cover;
+}
+
+.popular-item h4 {
+  font-size: 32px;
+  margin: 0;
+}
+
+.popular-item p {
+  font-size: 32px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.bottom-nav {
+  display: flex;
+  justify-content: space-around;
+  padding: 12px;
+  margin-top: auto;
+}
+
+.nav-item {
+  height:40px;
+  width:35px;
+}
+
+@media (min-height: 1000px) {
+  .all {
+    height: 300px;
+    width: 280px;
   }
+
+  .popular-img {
+    height: 400px;
+    width: 350px;
+  }
+}
